--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Typing SVG</title>
+</head>
+<body>
+  <p align="center">
+    <img src="https://readme-typing-svg.herokuapp.com?size=30&amp;font=Satisfy&amp;color=4c566a&amp;center=true&amp;vCenter=true&amp;lines=Yohanes+Sabattian+Adeleony.;22+Tahun;Kota+Semarang+Jawa+Tengah" alt="Typing SVG">
+  </p>
+</body>
+</html>
 
