--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Typing SVG</title>
+  <style>
+    #typing {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      font-size: 2em;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
   <div id="typing"></div>
